1998-12-07  Tom Tromey  <tromey@cygnus.com>

	Modified version of patch from Godmar Back:
	* gnu/testlet/java/beans/IntrospectorTest.java (tryone): Split
	`check' call into 3 calls, and use 2-argument form.  Pass caught
	exception to `debug' method of harness.
	* gnu/testlet/TestHarness.java (verbose, debug): New methods.
	(check): Call `debug' with result and expected on failure.
	* gnu/testlet/SimpleTestHarness.java (debug): New instance
	variable.
	(verbose): New methods.
	(debug): Likewise.
	(runtest): Call `debug' on exceptions.
	(main): Accept `-debug' on command line.
	(SimpleTestHarness): Added verbose and debug arguments.

	From Godmar Back:
	* Makefile.in: Rebuilt.
	* Makefile.am (check-local): Pass TESTFLAGS to SimpleTestHarness.
	(TESTFLAGS): New macro.

1998-12-07  Anthony Green  <green@cygnus.com>

	* README, gnu/testlet/java/beans/DescriptorTest.java,
	gnu/testlet/java/beans/IntrospectorTest.java,
	gnu/testlet/java/lang/Boolean/equals_Boolean.java,
	gnu/testlet/java/lang/Boolean/get.java,
	gnu/testlet/java/lang/Boolean/hashcode_Boolean.java,
	gnu/testlet/java/lang/Boolean/new_Boolean.java,
	gnu/testlet/java/lang/Boolean/value.java,
	gnu/testlet/java/lang/Byte/new_Byte.java,
	gnu/testlet/java/lang/Character/classify.java,
	gnu/testlet/java/lang/Character/classify12.java,
	gnu/testlet/java/lang/Character/consts.java,
	gnu/testlet/java/lang/Character/digit.java,
	gnu/testlet/java/lang/Character/equals_Character.java,
	gnu/testlet/java/lang/Character/forDigit.java,
	gnu/testlet/java/lang/Character/getNumericValue.java,
	gnu/testlet/java/lang/Character/getType.java,
	gnu/testlet/java/lang/Character/getType12.java,
	gnu/testlet/java/lang/Character/hash.java,
	gnu/testlet/java/lang/Character/to.java,
	gnu/testlet/java/lang/Integer/getInteger.java,
	gnu/testlet/java/lang/Integer/new_Integer.java,
	gnu/testlet/java/lang/Long/getLong.java,
	gnu/testlet/java/lang/Long/new_Long.java,
	gnu/testlet/java/lang/Short/hash.java,